--- a/index.html
+++ b/index.html
@@ -22,11 +22,10 @@
       rel="stylesheet"
     />
     <!-- //Stylesheets -->
-    <meta http-equiv="refresh" content="33;" />
   </head>
   <body>
     <header class="container">
-      <img src="images/logo.png" alt="JobFinder Logo" />
+      <a href="#"><img src="images/logo.png" alt="JobFinder Logo" /></a>
       <nav class="menu">
         <ul>
           <li><a href="#">Find jobs</a></li>
@@ -36,29 +35,119 @@
       </nav>
     </header>
     <main class="container">
-      <section class="banner">
-        <div class="text">
-          <h1>The easiest way to find your new job</h1>
-          <p>
-            Connect for free to the best companies and get the job of your
-            dreams.
-          </p>
+      <section class="main-banner">
+        <div class="banner-container">
+          <div class="text">
+            <h1>The easiest way to find your new job</h1>
+            <p>
+              Connect for free to the best companies and get the job of your
+              dreams.
+            </p>
+          </div>
+          <form id="search-form" name="Search Form">
+            <input
+              type="text"
+              name="job"
+              id="job"
+              placeholder="Enter your position"
+            />
+            <select name="region" id="region">
+              <option value="All">All states</option>
+            </select>
+            <select name="category" id="category">
+              <option value="">Category</option>
+            </select>
+            <input type="submit" value="Search" />
+          </form>
         </div>
-        <form>
-          <input
-            type="text"
-            name="job"
-            id="job"
-            placeholder="Enter your position"
-          />
-          <select name="region" id="region">
-            <option value="All">All states</option>
-          </select>
-          <select name="category" id="category">
-            <option value="">Category</option>
-          </select>
-          <input type="submit" value="Search" />
-        </form>
+      </section>
+      <section class="latest-jobs">
+        <h1>Latest jobs posted</h1>
+        <ul>
+          <li>
+            <a href="#" class="job">
+              <div class="company-box">
+                <div class="logo">
+                  <img src="images/googlelogo.png" alt="Google Logo" />
+                </div>
+                <div class="info">
+                  <h2>Developer</h2>
+                  <p>Google</p>
+                </div>
+              </div>
+              <div class="locality">
+                <i class="bx bxs-map"></i>
+                <p>Mountain View, California</p>
+              </div>
+              <div class="type">
+                <p><span class="clt">CLT</span></p>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="job">
+              <div class="company-box">
+                <div class="logo">
+                  <img src="images/ibmlogo.png" alt="IBM Logo" />
+                </div>
+                <div class="info">
+                  <h2>DBA</h2>
+                  <p>IBM</p>
+                </div>
+              </div>
+              <div class="locality">
+                <i class="bx bxs-map"></i>
+                <p>Armonk, New York</p>
+              </div>
+              <div class="type">
+                <p><span class="pj">PJ</span></p>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="job">
+              <div class="company-box">
+                <div class="logo">
+                  <img src="images/linkedinlogo.png" alt="LinkedIn Logo" />
+                </div>
+                <div class="info">
+                  <h2>Front End Developer</h2>
+                  <p>Linkedin</p>
+                </div>
+              </div>
+              <div class="locality">
+                <i class="bx bxs-map"></i>
+                <p>Sunnyvale, California</p>
+              </div>
+              <div class="type">
+                <p><span class="home-office">Home Office</span></p>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="job">
+              <div class="company-box">
+                <div class="logo">
+                  <img src="images/facebooklogo.png" alt="Facebook Logo" />
+                </div>
+                <div class="info">
+                  <h2>Full Stack Developer</h2>
+                  <p>Facebook</p>
+                </div>
+              </div>
+              <div class="locality">
+                <i class="bx bxs-map"></i>
+                <p>Menlo Park, California</p>
+              </div>
+              <div class="type">
+                <p><span class="pj">PJ</span></p>
+              </div>
+            </a>
+          </li>
+        </ul>
+        <div class="view-more">
+          <a href="#">view more</a>
+        </div>
       </section>
     </main>
     <footer class="container"></footer>
