--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           </form>
         </div>
       </section>
-      <section class="latest-jobs">
+      <section class="latest-jobs b-container">
         <h1>Latest jobs posted</h1>
         <ul>
           <li>
@@ -147,6 +147,46 @@
         </ul>
         <div class="view-more">
           <a href="#">view more</a>
+        </div>
+      </section>
+      <section class="send-job">
+        <div class="b-container">
+          <div class="text">
+            <h1>Submit a job that will be seen by thousands of applicants</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
+              dignissimos rem repudiandae unde voluptatum, voluptatibus quia
+              corporis aliquid quas. A ea nostrum quibusdam cum accusantium
+              reprehenderit nemo ut debitis quam?
+            </p>
+          </div>
+          <a href="#">Send vacancy</a>
+        </div>
+      </section>
+      <section class="statistics b-container">
+        <h1>JobFinder Statistics</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus
+          velit rerum dolorum, reprehenderit quam quae vitae inventore
+          recusandae corporis, ipsa fugit, explicabo pariatur!
+        </p>
+        <div class="stats">
+          <div class="stats-box">
+            <p><span>150</span></p>
+            <p>Open positions</p>
+          </div>
+          <div class="stats-box">
+            <p><span>250</span></p>
+            <p>Hired candidates</p>
+          </div>
+          <div class="stats-box">
+            <p><span>50</span></p>
+            <p>Participating companies</p>
+          </div>
+          <div class="stats-box">
+            <p><span>550</span></p>
+            <p>Candidates</p>
+          </div>
         </div>
       </section>
     </main>
