--- a/index.html
+++ b/index.html
@@ -189,6 +189,9 @@
           </div>
         </div>
       </section>
+      <section class="testimony">
+        <div class="b-container"></div>
+      </section>
     </main>
     <footer class="container"></footer>
   </body>
