--- a/index.html
+++ b/index.html
@@ -190,7 +190,97 @@
         </div>
       </section>
       <section class="testimony">
-        <div class="b-container"></div>
+        <div class="b-container">
+          <h1>See what candidates say</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae enim
+            cumque sed commodi quisquam reiciendis autem neque aspernatur rem
+            corrupti ullam laborum alias, reprehenderit tempora aut qui nesciunt
+            optio blanditiis.
+          </p>
+          <div class="boxes">
+            <div class="box">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad
+                totam, sapiente eum aut corrupti placeat cum. Quas vero maiores
+                consequuntur
+              </p>
+              <img src="images/avatar1.png" alt="testimony avatar image" />
+              <p>Johnny</p>
+            </div>
+            <div class="box">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad
+                totam, sapiente eum aut corrupti placeat cum. Quas vero maiores
+                consequuntur
+              </p>
+              <img src="images/avatar2.png" alt="testimony avatar image" />
+              <p>Karen</p>
+            </div>
+            <div class="box">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad
+                totam, sapiente eum aut corrupti placeat cum. Quas vero maiores
+                consequuntur
+              </p>
+              <img src="images/avatar3.png" alt="testimony avatar image" />
+              <p>Henry</p>
+            </div>
+            <div class="box">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad
+                totam, sapiente eum aut corrupti placeat cum. Quas vero maiores
+                consequuntur
+              </p>
+              <img src="images/avatar4.png" alt="testimony avatar image" />
+              <p>Emily</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="blog b-container">
+        <h1>Latest articles from our blog</h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus, iure
+          odit. Vero ratione reiciendis laudantium, sunt ex, quas, at quos illum
+          ipsam necessitatibus veritatis. Inventore voluptates perferendis
+          voluptatem magnam aperiam!
+        </p>
+        <div class="articles">
+          <article class="box">
+            <img src="images/blog1.jpg" alt="Post image" />
+            <h4>Article Title</h4>
+            <p><time>February 5, 2019</time> | Comments</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Cupiditate expedita rerum unde placeat doloremque quisquam fugit
+              obcaecati atque itaque
+            </p>
+            <a href="#">read more</a>
+          </article>
+          <article class="box">
+            <img src="images/blog2.jpg" alt="Post image" />
+            <h4>Article Title</h4>
+            <p><time>January 30, 2018</time> | Comments</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Cupiditate expedita rerum unde placeat doloremque quisquam fugit
+              obcaecati atque itaque
+            </p>
+            <a href="#">read more</a>
+          </article>
+          <article class="box">
+            <img src="images/blog3.jpg" alt="Post image" />
+            <h4>Article Title</h4>
+            <p><time>January 20, 2019</time> | Comments</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Cupiditate expedita rerum unde placeat doloremque quisquam fugit
+              obcaecati atque itaque
+            </p>
+            <a href="#">read more</a>
+          </article>
+        </div>
       </section>
     </main>
     <footer class="container"></footer>
