styled blog section

--- a/index.html
+++ b/index.html
@@ -249,36 +249,36 @@
         <div class="articles">
           <article class="box">
             <img src="images/blog1.jpg" alt="Post image" />
-            <h4>Article Title</h4>
-            <p><time>February 5, 2019</time> | Comments</p>
+            <h2><a href="#">Article Title</a></h2>
+            <p class="info"><time>February 5, 2019</time> | Comments</p>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Cupiditate expedita rerum unde placeat doloremque quisquam fugit
               obcaecati atque itaque
             </p>
-            <a href="#">read more</a>
+            <a href="#" class="read">read more</a>
           </article>
           <article class="box">
             <img src="images/blog2.jpg" alt="Post image" />
-            <h4>Article Title</h4>
-            <p><time>January 30, 2018</time> | Comments</p>
+            <h2><a href="#">Article Title</a></h2>
+            <p class="info"><time>January 30, 2018</time> | Comments</p>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Cupiditate expedita rerum unde placeat doloremque quisquam fugit
               obcaecati atque itaque
             </p>
-            <a href="#">read more</a>
+            <a href="#" class="read">read more</a>
           </article>
           <article class="box">
             <img src="images/blog3.jpg" alt="Post image" />
-            <h4>Article Title</h4>
-            <p><time>January 20, 2019</time> | Comments</p>
+            <h2><a href="#">Article Title</a></h2>
+            <p class="info"><time>January 20, 2019</time> | Comments</p>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Cupiditate expedita rerum unde placeat doloremque quisquam fugit
               obcaecati atque itaque
             </p>
-            <a href="#">read more</a>
+            <a href="#" class="read">read more</a>
           </article>
         </div>
       </section>
