--- a/index.html
+++ b/index.html
@@ -281,6 +281,7 @@
             <a href="#" class="read">read more</a>
           </article>
         </div>
+        <a class="read" href="#">View more</a>
       </section>
     </main>
     <footer class="container"></footer>
