blog section view more button

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
           <article class="box">
             <img src="images/blog1.jpg" alt="Post image" />
             <h2><a href="#">Article Title</a></h2>
-            <p class="info"><time>February 5, 2019</time> | Comments</p>
+            <p class="info"><time>February 5, 2022</time> | Comments</p>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Cupiditate expedita rerum unde placeat doloremque quisquam fugit
@@ -261,7 +261,7 @@
           <article class="box">
             <img src="images/blog2.jpg" alt="Post image" />
             <h2><a href="#">Article Title</a></h2>
-            <p class="info"><time>January 30, 2018</time> | Comments</p>
+            <p class="info"><time>January 30, 2022</time> | Comments</p>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Cupiditate expedita rerum unde placeat doloremque quisquam fugit
@@ -272,7 +272,7 @@
           <article class="box">
             <img src="images/blog3.jpg" alt="Post image" />
             <h2><a href="#">Article Title</a></h2>
-            <p class="info"><time>January 20, 2019</time> | Comments</p>
+            <p class="info"><time>January 20, 2022</time> | Comments</p>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Cupiditate expedita rerum unde placeat doloremque quisquam fugit
@@ -284,6 +284,26 @@
         <a href="#" class="read">view more</a>
       </section>
     </main>
-    <footer class="container"></footer>
+    <footer class="container b-container">
+      <div class="main">
+        <a href="#"><img src="images/logo.png" alt="JobFinder Logo" /></a>
+        <p>The easiest way to find your next job.</p>
+      </div>
+      <div class="social-links">
+        <a href="#"><i class="bx bxl-github"></i></a>
+        <a href="#"><i class="bx bxl-twitter"></i></a>
+        <a href="#"><i class="bx bxl-linkedin-square"></i></a>
+        <a href="#"><i class="bx bxl-dev-to"></i></a>
+        <a href="#"><i class="bx bxl-youtube"></i></a>
+      </div>
+      <div class="copyright">
+        <p>
+          Website Made By
+          <a href="https://ladislaubpaiva.pages.dev/">
+            Ladislau Paiva &copy; 2022
+          </a>
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
