--- a/index.html
+++ b/index.html
@@ -296,11 +296,11 @@
         <p>The easiest way to find your next job.</p>
       </div>
       <div class="social-links">
-        <a href="#"><i class="bx bxl-github"></i></a>
-        <a href="#"><i class="bx bxl-twitter"></i></a>
-        <a href="#"><i class="bx bxl-linkedin-square"></i></a>
-        <a href="#"><i class="bx bxl-dev-to"></i></a>
-        <a href="#"><i class="bx bxl-youtube"></i></a>
+        <a href="#" title="Github"><i class="bx bxl-github"></i></a>
+        <a href="#" title="Twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="#" title="LinkedIn"><i class="bx bxl-linkedin-square"></i></a>
+        <a href="#" title="Dev Community"><i class="bx bxl-dev-to"></i></a>
+        <a href="#" title="Youtube"><i class="bx bxl-youtube"></i></a>
       </div>
       <div class="copyright">
         <p>
