Refactoring the home pagebackup

--- a/index.html
+++ b/index.html
@@ -81,12 +81,14 @@
                   <p>Google</p>
                 </div>
               </div>
-              <div class="locality">
-                <i class="bx bxs-map"></i>
-                <p>Mountain View, California</p>
-              </div>
-              <div class="type">
-                <p><span class="clt">CLT</span></p>
+              <div class="details">
+                <div class="locality">
+                  <i class="bx bxs-map"></i>
+                  <p>Mountain View, California</p>
+                </div>
+                <div class="type">
+                  <p><span class="clt">CLT</span></p>
+                </div>
               </div>
             </a>
           </li>
@@ -101,12 +103,14 @@
                   <p>IBM</p>
                 </div>
               </div>
-              <div class="locality">
-                <i class="bx bxs-map"></i>
-                <p>Armonk, New York</p>
-              </div>
-              <div class="type">
-                <p><span class="pj">PJ</span></p>
+              <div class="details">
+                <div class="locality">
+                  <i class="bx bxs-map"></i>
+                  <p>Armonk, New York</p>
+                </div>
+                <div class="type">
+                  <p><span class="pj">PJ</span></p>
+                </div>
               </div>
             </a>
           </li>
@@ -121,12 +125,14 @@
                   <p>Linkedin</p>
                 </div>
               </div>
-              <div class="locality">
-                <i class="bx bxs-map"></i>
-                <p>Sunnyvale, California</p>
-              </div>
-              <div class="type">
-                <p><span class="home-office">Home Office</span></p>
+              <div class="details">
+                <div class="locality">
+                  <i class="bx bxs-map"></i>
+                  <p>Sunnyvale, California</p>
+                </div>
+                <div class="type">
+                  <p><span class="home-office">Home Office</span></p>
+                </div>
               </div>
             </a>
           </li>
@@ -141,12 +147,14 @@
                   <p>Facebook</p>
                 </div>
               </div>
-              <div class="locality">
-                <i class="bx bxs-map"></i>
-                <p>Menlo Park, California</p>
-              </div>
-              <div class="type">
-                <p><span class="pj">PJ</span></p>
+              <div class="details">
+                <div class="locality">
+                  <i class="bx bxs-map"></i>
+                  <p>Menlo Park, California</p>
+                </div>
+                <div class="type">
+                  <p><span class="pj">PJ</span></p>
+                </div>
               </div>
             </a>
           </li>
@@ -207,36 +215,32 @@
           <div class="boxes">
             <div class="box">
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad
-                totam, sapiente eum aut corrupti placeat cum. Quas vero maiores
-                consequuntur
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
+                vero maiores consequuntur
               </p>
               <img src="images/avatar1.png" alt="testimony avatar image" />
               <p>Johnny</p>
             </div>
             <div class="box">
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad
-                totam, sapiente eum aut corrupti placeat cum. Quas vero maiores
-                consequuntur
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
+                vero maiores consequuntur
               </p>
               <img src="images/avatar2.png" alt="testimony avatar image" />
               <p>Karen</p>
             </div>
             <div class="box">
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad
-                totam, sapiente eum aut corrupti placeat cum. Quas vero maiores
-                consequuntur
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
+                vero maiores consequuntur
               </p>
               <img src="images/avatar3.png" alt="testimony avatar image" />
               <p>Henry</p>
             </div>
             <div class="box">
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad
-                totam, sapiente eum aut corrupti placeat cum. Quas vero maiores
-                consequuntur
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
+                vero maiores consequuntur
               </p>
               <img src="images/avatar4.png" alt="testimony avatar image" />
               <p>Emily</p>
@@ -256,33 +260,30 @@
           <article class="box">
             <img src="images/blog1.jpg" alt="Post image" />
             <h2><a href="#">Article Title</a></h2>
-            <p class="info"><time>February 5, 2022</time> | Comments</p>
+            <p class="info"><time>February 5, 2022</time> | 228 Comments</p>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Cupiditate expedita rerum unde placeat doloremque quisquam fugit
-              obcaecati atque itaque
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem
+              ipsum dolor sit amet consectetur adipisicing elit.
             </p>
             <a href="#" class="read">read more</a>
           </article>
           <article class="box">
             <img src="images/blog2.jpg" alt="Post image" />
             <h2><a href="#">Article Title</a></h2>
-            <p class="info"><time>January 30, 2022</time> | Comments</p>
+            <p class="info"><time>January 30, 2022</time> | 329 Comments</p>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Cupiditate expedita rerum unde placeat doloremque quisquam fugit
-              obcaecati atque itaque
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem
+              ipsum dolor sit amet consectetur adipisicing elit.
             </p>
             <a href="#" class="read">read more</a>
           </article>
           <article class="box">
             <img src="images/blog3.jpg" alt="Post image" />
             <h2><a href="#">Article Title</a></h2>
-            <p class="info"><time>January 20, 2022</time> | Comments</p>
+            <p class="info"><time>January 20, 2022</time> | 129 Comments</p>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Cupiditate expedita rerum unde placeat doloremque quisquam fugit
-              obcaecati atque itaque
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem
+              ipsum dolor sit amet consectetur adipisicing elit.
             </p>
             <a href="#" class="read">read more</a>
           </article>
