--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
           &times;
         </a>
         <ul class="overlay-content">
-          <li><a href="#">Find jobs</a></li>
-          <li><a href="#">Post jobs</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="./finder.html">Find jobs</a></li>
+          <li><a href="./post.html">Post jobs</a></li>
+          <li><a href="./contact.html">Contact</a></li>
         </ul>
       </nav>
     </header>
