--- a/post.html
+++ b/post.html
@@ -17,7 +17,7 @@
     <link rel="shortcut icon" href="images/logo.png" type="image/x-icon" />
     <!-- Stylesheets -->
     <link rel="stylesheet" href="styles/main.css" />
-    <link rel="stylesheet" href="styles/finder.css" />
+    <link rel="stylesheet" href="styles/post.css" />
     <link
       href="https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css"
       rel="stylesheet"
