--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
           &times;
         </a>
         <ul class="overlay-content">
-          <li><a href="./finder.html">Find jobs</a></li>
-          <li><a href="./post.html">Post jobs</a></li>
-          <li><a href="./contact.html">Contact</a></li>
+          <li><a href="#">Find jobs</a></li>
+          <li><a href="#">Post jobs</a></li>
+          <li><a href="#">Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -301,7 +301,9 @@
     </main>
     <footer class="container b-container">
       <div class="main">
-        <a href="#"><img src="images/logo.png" alt="JobFinder Logo" /></a>
+        <a href="index.html">
+          <img src="images/logo.png" alt="JobFinder Logo" />
+        </a>
         <p>The easiest way to find your next job.</p>
       </div>
       <div class="social-links">
