--- a/index.html
+++ b/index.html
@@ -2,326 +2,29 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Ladislau Paiva" />
-    <title>JobFinder | Free Job Vacancies</title>
+    <title>Jobs | Free Job Opportunities</title>
     <meta
       name="keywords"
-      content="job vacancies, job, vacancies, post vacancies, find vacancies"
+      content="job opportunities, job, opportunities, post opportunities, find opportunities"
     />
     <meta
       name="description"
       content="Connect for free to the best companies and get the job of your dreams"
     />
-    <link rel="shortcut icon" href="images/logo.png" type="image/x-icon" />
-    <!-- Stylesheets -->
-    <link rel="stylesheet" href="styles/main.css" />
-    <link rel="stylesheet" href="styles/index.css" />
+
     <link
-      href="https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css"
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@300;400;600;700;800&display=swap"
-      rel="stylesheet"
-    />
-    <!-- //Stylesheets -->
   </head>
   <body>
-    <header class="container">
-      <a href="index.html">
-        <img src="images/logo.png" alt="JobFinder Logo" />
-      </a>
-      <span id="myNavBtn" onclick="openNav()"> &#9776; </span>
-
-      <nav id="myNav" class="myNav overlay">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">
-          &times;
-        </a>
-        <ul class="overlay-content">
-          <li><a href="#">Find jobs</a></li>
-          <li><a href="#">Post jobs</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-      </nav>
-    </header>
-    <main class="container">
-      <section class="main-banner">
-        <div class="banner-container">
-          <div class="text">
-            <h1>The easiest way to find your new job</h1>
-            <p>
-              Connect for free to the best companies and get the job of your
-              dreams.
-            </p>
-          </div>
-          <form id="search-form" name="Search Form">
-            <input
-              type="text"
-              name="job"
-              id="job"
-              placeholder="Enter your position"
-            />
-            <select name="region" id="region">
-              <option value="All">All states</option>
-            </select>
-            <select name="category" id="category">
-              <option value="">Category</option>
-            </select>
-            <input type="submit" value="Search" />
-          </form>
-        </div>
-      </section>
-      <section class="latest-jobs b-container">
-        <h1>Latest jobs posted</h1>
-        <ul>
-          <li>
-            <a href="#" class="job">
-              <div class="company-box">
-                <div class="logo">
-                  <img src="images/googlelogo.png" alt="Google Logo" />
-                </div>
-                <div class="info">
-                  <h2>Developer</h2>
-                  <p>Google</p>
-                </div>
-              </div>
-              <div class="details">
-                <div class="locality">
-                  <i class="bx bxs-map"></i>
-                  <p>Mountain View, California</p>
-                </div>
-                <div class="type">
-                  <p><span class="clt">CLT</span></p>
-                </div>
-              </div>
-            </a>
-          </li>
-          <li>
-            <a href="#" class="job">
-              <div class="company-box">
-                <div class="logo">
-                  <img src="images/ibmlogo.png" alt="IBM Logo" />
-                </div>
-                <div class="info">
-                  <h2>DBA</h2>
-                  <p>IBM</p>
-                </div>
-              </div>
-              <div class="details">
-                <div class="locality">
-                  <i class="bx bxs-map"></i>
-                  <p>Armonk, New York</p>
-                </div>
-                <div class="type">
-                  <p><span class="pj">PJ</span></p>
-                </div>
-              </div>
-            </a>
-          </li>
-          <li>
-            <a href="#" class="job">
-              <div class="company-box">
-                <div class="logo">
-                  <img src="images/linkedinlogo.png" alt="LinkedIn Logo" />
-                </div>
-                <div class="info">
-                  <h2>Front End Developer</h2>
-                  <p>Linkedin</p>
-                </div>
-              </div>
-              <div class="details">
-                <div class="locality">
-                  <i class="bx bxs-map"></i>
-                  <p>Sunnyvale, California</p>
-                </div>
-                <div class="type">
-                  <p><span class="home-office">Home Office</span></p>
-                </div>
-              </div>
-            </a>
-          </li>
-          <li>
-            <a href="#" class="job">
-              <div class="company-box">
-                <div class="logo">
-                  <img src="images/facebooklogo.png" alt="Facebook Logo" />
-                </div>
-                <div class="info">
-                  <h2>Full Stack Developer</h2>
-                  <p>Facebook</p>
-                </div>
-              </div>
-              <div class="details">
-                <div class="locality">
-                  <i class="bx bxs-map"></i>
-                  <p>Menlo Park, California</p>
-                </div>
-                <div class="type">
-                  <p><span class="pj">PJ</span></p>
-                </div>
-              </div>
-            </a>
-          </li>
-        </ul>
-        <div class="view-more">
-          <a href="#">view more</a>
-        </div>
-      </section>
-      <section class="send-job">
-        <div class="b-container">
-          <div class="text">
-            <h1>Submit a job that will be seen by thousands of applicants</h1>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
-              dignissimos rem repudiandae unde voluptatum, voluptatibus quia
-              corporis aliquid quas. A ea nostrum quibusdam cum accusantium
-              reprehenderit nemo ut debitis quam?
-            </p>
-          </div>
-          <a href="#">Send vacancy</a>
-        </div>
-      </section>
-      <section class="statistics b-container">
-        <h1>JobFinder Statistics</h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus
-          velit rerum dolorum, reprehenderit quam quae vitae inventore
-          recusandae corporis, ipsa fugit, explicabo pariatur!
-        </p>
-        <div class="stats">
-          <div class="stats-box">
-            <p><span>150</span></p>
-            <p>Open positions</p>
-          </div>
-          <div class="stats-box">
-            <p><span>250</span></p>
-            <p>Hired candidates</p>
-          </div>
-          <div class="stats-box">
-            <p><span>50</span></p>
-            <p>Participating companies</p>
-          </div>
-          <div class="stats-box">
-            <p><span>550</span></p>
-            <p>Candidates</p>
-          </div>
-        </div>
-      </section>
-      <section class="testimony">
-        <div class="b-container">
-          <h1>See what candidates say</h1>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae enim
-            cumque sed commodi quisquam reiciendis autem neque aspernatur rem
-            corrupti ullam laborum alias, reprehenderit tempora aut qui nesciunt
-            optio blanditiis.
-          </p>
-          <div class="boxes">
-            <div class="box">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
-                vero maiores consequuntur
-              </p>
-              <img src="images/avatar1.png" alt="testimony avatar image" />
-              <p>Johnny</p>
-            </div>
-            <div class="box">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
-                vero maiores consequuntur
-              </p>
-              <img src="images/avatar2.png" alt="testimony avatar image" />
-              <p>Karen</p>
-            </div>
-            <div class="box">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
-                vero maiores consequuntur
-              </p>
-              <img src="images/avatar3.png" alt="testimony avatar image" />
-              <p>Henry</p>
-            </div>
-            <div class="box">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
-                vero maiores consequuntur
-              </p>
-              <img src="images/avatar4.png" alt="testimony avatar image" />
-              <p>Emily</p>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="blog b-container">
-        <h1>Latest articles from our blog</h1>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus, iure
-          odit. Vero ratione reiciendis laudantium, sunt ex, quas, at quos illum
-          ipsam necessitatibus veritatis. Inventore voluptates perferendis
-          voluptatem magnam aperiam!
-        </p>
-        <div class="articles">
-          <article class="box">
-            <img src="images/blog1.jpg" alt="Post image" />
-            <h2><a href="#">Article Title</a></h2>
-            <p class="info"><time>February 5, 2022</time> | 228 Comments</p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem
-              ipsum dolor sit amet consectetur adipisicing elit.
-            </p>
-            <a href="#" class="read">read more</a>
-          </article>
-          <article class="box">
-            <img src="images/blog2.jpg" alt="Post image" />
-            <h2><a href="#">Article Title</a></h2>
-            <p class="info"><time>January 30, 2022</time> | 329 Comments</p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem
-              ipsum dolor sit amet consectetur adipisicing elit.
-            </p>
-            <a href="#" class="read">read more</a>
-          </article>
-          <article class="box">
-            <img src="images/blog3.jpg" alt="Post image" />
-            <h2><a href="#">Article Title</a></h2>
-            <p class="info"><time>January 20, 2022</time> | 129 Comments</p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem
-              ipsum dolor sit amet consectetur adipisicing elit.
-            </p>
-            <a href="#" class="read">read more</a>
-          </article>
-        </div>
-        <a href="#" class="read">view more</a>
-      </section>
-    </main>
-    <footer class="container b-container">
-      <div class="main">
-        <a href="index.html">
-          <img src="images/logo.png" alt="JobFinder Logo" />
-        </a>
-        <p>The easiest way to find your next job.</p>
-      </div>
-      <div class="social-links">
-        <a href="#" title="Github"><i class="bx bxl-github"></i></a>
-        <a href="#" title="Twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" title="LinkedIn"><i class="bx bxl-linkedin-square"></i></a>
-        <a href="#" title="Dev Community"><i class="bx bxl-dev-to"></i></a>
-        <a href="#" title="Youtube"><i class="bx bxl-youtube"></i></a>
-      </div>
-      <div class="copyright">
-        <p>
-          Website Made By
-          <a href="https://ladislaubpaiva.pages.dev/">
-            Ladislau Paiva &copy; 2022
-          </a>
-        </p>
-      </div>
-    </footer>
-    <script src="scripts/index.js"></script>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
